# mcp-server-scaffold

./: README.md  pyproject.toml
.github/: FUNDING.yml
mcp_scaffold/: cli.py
my-test-server/: .gitignore  README.md  pyproject.toml
my-test-server/tests/: test_server.py
test-output/my-test-server/src/my_test_server/: server.py
tests/: test_scaffold.py
