[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-test-server"
version = "0.1.0"
description = "A test MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_test_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
